gccida/c3/subst
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst/src/combine.c:3820:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v41; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst/src/combine.c:3827:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v50; // [rsp+18h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst/src/combine.c:3868:34: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( CLOBBER, ( machine_mode)BYTE2( v9), const_int_rtx[64]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst/src/combine.c:3983:7: error: use of undeclared identifier 'aAddChildDie'
v20 = aAddChildDie[11]; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst/src/combine.c:3985:6: error: use of undeclared identifier 'aAddChildDie'
if ( aAddChildDie[11] == 101 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst/src/combine.c:4171:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v40), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst/src/combine.c:4173:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v8->fld[0].rtwint + 2)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst/src/combine.c:4184:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v40), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst/src/combine.c:4186:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v8->fld[0].rtwint + 2), 
  ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subst/src/obj/combine.o] Error 1
